<?xml version="1.0"?>
<package format="2">
  <name>velodyne_light</name>
  <version>1.0.0</version>
  <description>
    ROS device driver and trasformation for Velodyne 3D LIDARs (light version).
  </description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="jinnw.moretti99@gmail.com">Gianni Moretti</maintainer>
  <author>Gianni Moretti</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>libpcap</depend>
  <depend>roscpp</depend>
  <depend>tf</depend>
  <depend>velodyne_msgs</depend>

  <test_depend>roslaunch</test_depend>

</package>
